--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "nvim"]
 	path = config/nvim
-	url = https://github.com/TommyPujol06/nvim
+	url = git@github.com:TommyPujol06/dotfiles.git
 
